Change somer values conversions and add README